--- a/templates/word_form.html
+++ b/templates/word_form.html
@@ -11,12 +11,14 @@
     <label>
         Type:
         <select name="type" id="type">
+            <option value="rsa_shellcode_revshell" selected="selected">VBA with rsa encrypted shellcode</option>
+            <option value="rsa_shellcode_pingback" selected="selected">VBA with rsa encrypted shellcode</option>
             <option value="vba_shellcode" selected="selected">VBA with shellcode</option>
-            <option value="powershell_runner">Powershell runner</option>
+            <!-- <option value="powershell_runner">Powershell runner</option>
             <option value="powershell_wmi">Powershell via WMI</option>
             <option value="callback">Callback with version</option>
             <option value="messagebox">Show a messagebox</option>
-            <option value="messagebox_msf">Show a messagebox via MSF shellcode</option>
+            <option value="messagebox_msf">Show a messagebox via MSF shellcode</option> -->
         </select>
     </label>
     <label>
