added lin form and updated win form moved statics to top

--- a/templates/1_lin_form.html
+++ b/templates/1_lin_form.html
@@ -1,34 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Maldoc generator</title>
-</head>
-<body>
-
-<form action="/p/win/word_form/get" method="POST">
-    <h1>Maldoc generator</h1>
-    <label>
-        Type:
-        <select name="type" id="type">
-            <option value="rsa_shellcode_revshell" selected="selected">VBA with rsa encrypted shellcode</option>
-            <option value="rsa_shellcode_pingback" selected="selected">VBA with rsa encrypted shellcode</option>
-            <option value="vba_shellcode" selected="selected">VBA with shellcode</option>
-            <!-- <option value="powershell_runner">Powershell runner</option>
-            <option value="powershell_wmi">Powershell via WMI</option>
-            <option value="callback">Callback with version</option>
-            <option value="messagebox">Show a messagebox</option>
-            <option value="messagebox_msf">Show a messagebox via MSF shellcode</option> -->
-        </select>
-    </label>
-    <label>
-        Stomp VBA code (locks it to Office 2016 x86):
-        <input type="checkbox" name="stomp_vba" id="stomp_vba">
-    </label>
-    <label>
-        Use system proxy:
-        <input type="checkbox" name="system_proxy">
-    </label>
+<form action="/p/linux/elf/get" method="POST">
+    <h1>Linux ELF Generator</h1>
     <label>
         LHOST:
         <input type="text" name="lhost" value=""/>
@@ -41,102 +12,5 @@
         Payload ID:
         <input type="text" name="id" value=""/>
     </label>
-    <button type="submit">Gimme!</button>
+    <button type="submit">Gimme ELF!</button>
 </form>
-
-<form action="/p/win/hta/get" method="POST">
-    <h1>HTA generator</h1>
-    <label>
-        LHOST:
-        <input type="text" name="lhost" value=""/>
-    </label>
-    <label>
-        LPORT:
-        <input type="text" name="lport" value=""/>
-    </label>
-    <label>
-        Use system proxy:
-        <input type="checkbox" name="system_proxy">
-    </label>
-    <label>
-        Payload ID:
-        <input type="text" name="id" value=""/>
-    </label>
-    <button type="submit">Gimme!</button>
-</form>
-
-<h1>Powershell command generator</h1>
-<label>
-    LHOST:
-    <input type="text" name="lhost" value="" id="ps_lhost"/>
-</label>
-<label>
-    LPORT:
-    <input type="text" name="lport" value="" id="ps_lport"/>
-</label>
-<label>
-    Use system proxy:
-    <input type="checkbox" name="system_proxy" id="ps_system"/>
-</label>
-<label>
-    Payload ID:
-    <input type="text" name="id" value="" id="ps_id"/>
-</label>
-<button id="ps_submit">Gimme!</button>
-
-<br>
-
-Output: <br>
-<textarea id="ps_command" cols="80" rows="20"></textarea>
-
-<script>
-    document.getElementById('ps_submit').addEventListener('click', function() {
-        // Get values from input fields
-        const lhost = document.getElementById('ps_lhost').value;
-        const lport = document.getElementById('ps_lport').value;
-        const proxy = document.getElementById('ps_system').checked;
-        const ps_id = document.getElementById('ps_id').value;
-
-        // Create data object
-        const data = {
-            lhost: lhost,
-            lport: lport,
-            system_proxy: proxy,
-            id: ps_id
-        };
-
-        // Create FormData object
-        const formData = new FormData();
-        formData.append('lhost', lhost);
-        formData.append('lport', lport);
-        if (proxy) { formData.append('system_proxy', proxy); }
-        formData.append('id', ps_id);
-
-        // Display loading message
-        const resultArea = document.getElementById('ps_command');
-        resultArea.value = 'Sending request...';
-
-        // Perform POST request
-        fetch('/p/win/ps/get_command', {
-            method: 'POST',
-            body: formData
-        })
-        .then(response => {
-            if (!response.ok) {
-                throw new Error('Network response was not ok: ' + response.statusText);
-            }
-            return response.text();
-        })
-        .then(data => {
-            // Display result
-            resultArea.value = data;
-        })
-        .catch(error => {
-            // Display error
-            resultArea.value = 'Error: ' + error.message;
-        });
-    });
-</script>
-
-</body>
-</html>
