--- a/templates/1_lin_form.html
+++ b/templates/1_lin_form.html
@@ -1,4 +1,4 @@
-<form action="/p/linux/elf/get" method="POST">
+<form action="/p/lin/elf/get" method="POST">
     <h1>Linux ELF Generator</h1>
     <label>
         LHOST:
