--- a/templates/1_win_form.html
+++ b/templates/1_win_form.html
@@ -11,8 +11,8 @@
     <label>
         Type:
         <select name="type" id="type">
-            <option value="aes_shellcode_revshell" selected="selected">VBA with aes encrypted shellcode</option>
-            <option value="aes_shellcode_pingback" selected="selected">VBA with aes encrypted shellcode</option>
+            <option value="aes_shellcode_revshell" selected="selected">VBA aes revshell</option>
+            <option value="aes_shellcode_pingback" selected="selected">VBA aes ping back (ping.exe)</option>
             <option value="vba_shellcode" selected="selected">VBA with shellcode</option>
             <!-- <option value="powershell_runner">Powershell runner</option>
             <option value="powershell_wmi">Powershell via WMI</option>
