--- a/templates/1_win_form.html
+++ b/templates/1_win_form.html
@@ -26,7 +26,7 @@
         <select name="stomp_version" id="stomp_version">
             <option value="" selected>Don't stomp</option>
             <option value="2010x86">Office 2010 x86</option>
-            <option value="2010x64">Office 2010 x64</option>
+            <!-- <option value="2010x64">Office 2010 x64</option> -->
             <option value="2013x86">Office 2013 x86</option>
             <option value="2013x64">Office 2013 x64</option>
             <option value="2016x86">Office 2016 x86</option>
